--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-minimal
+title: Mesh Deformation
+description: The project is an implementation of the mesh deformation approach detailed by Sorkine et al.
